# MPElectroML

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: index.md
examples/: combine_Li_Na copy.ipynb  combine_Li_Na.ipynb  preprocessing.ipynb  run.sh  run_analysis.py
examples/Li_Na_electrodes_uma_m/: get_data.py  read_data.ipynb
examples/Li_electrodes_uma_m/: get_data.py
examples/Li_ion_electrodes/: get_data.py
examples/Na_electrodes_uma_m/: get_data.py
examples/Na_ion_electrodes/: get_data.py
mpelectroml/: __init__.py  calculations.py  data_retrieval.py  structure_manipulation.py  utils.py
tests/: test_structure_manipulation.py
